--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "reactstrap": "^9.2.2",
+    "sass": "^1.77.8",
+    "typewriter-effect": "^2.21.0"
   }
 }
