--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "reactstrap": "^9.2.2",
     "sass": "^1.77.8",
     "typewriter-effect": "^2.21.0"
